<resources>
    <string name="app_name">Where do you stand</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="radiobutton">RadioButton</string>
    <string name="enter_email">Enter Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="welcome">Welcome!</string>
    <string name="logout">Logout</string>
    <string name="enter_name">Enter Name</string>
    <string name="test_your_knowledge">Test Your Knowledge!</string>
    <string name="already_have_an_account_click_here_to_login">Already have an account? Click here to Login.</string>
    <string name="quiz">Quiz</string>
    <string name="results">Results</string>
    <string name="profile">Profile</string>
    <string name="todo">TODO</string>
    <string name="what_is_this_question">What is this question?</string>
    <string name="option1">option1</string>
    <string name="option2">option2</string>
    <string name="option3">option3</string>
    <string name="option4">option4</string>
    <string name="total_questions">Total Questions</string>
    <string name="correct_answers">Correct Answers</string>
    <string name="wrong_answers">Wrong Answers</string>
    <string name="end_quiz">End Quiz</string>
    <string name="textview">TextView</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="cr">Correct answers</string>
    <string name="total">Total</string>
    <string name="val">val</string>

    <string name="average_score">Average Score:</string>
    <string name="user">user</string>
    <string name="dashboard">Dashboard</string>
    <string name="welcome_back">Welcome Back</string>


</resources>
