<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question">

    <TextView
        android:id="@+id/question"
        android:layout_width="415dp"
        android:layout_height="123dp"
        android:text="@string/what_is_this_question"
        android:textColor="#460B0B"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/option2"
        android:layout_width="206dp"
        android:layout_height="71dp"
        android:layout_weight="1"
        android:background="#03A9F4"
        android:text="@string/option2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question" />

    <Button
        android:id="@+id/option3"
        android:layout_width="201dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="#03A9F4"
        android:text="@string/option3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option1" />

    <Button
        android:id="@+id/option4"
        android:layout_width="206dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="#03A9F4"
        android:text="@string/option4"
        app:layout_constraintStart_toEndOf="@+id/option3"
        app:layout_constraintTop_toBottomOf="@+id/option2" />

    <Button
        android:id="@+id/option1"
        android:layout_width="201dp"
        android:layout_height="70dp"
        android:background="#03A9F4"
        android:text="@string/option1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question" />

</androidx.constraintlayout.widget.ConstraintLayout>