<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quiz_Result">

    <TextView
        android:id="@+id/total_questions"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginStart="212dp"
        android:layout_marginLeft="212dp"
        android:layout_marginTop="124dp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/correct_answers"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginStart="212dp"
        android:layout_marginLeft="212dp"
        android:layout_marginTop="204dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wrong_answers"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginStart="212dp"
        android:layout_marginLeft="212dp"
        android:layout_marginTop="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="112dp"
        android:layout_height="29dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="300dp"
        android:text="@string/wrong_answers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="114dp"
        android:layout_height="32dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="124dp"
        android:text="@string/total_questions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="114dp"
        android:layout_height="26dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="204dp"
        android:text="@string/correct_answers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/end_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:layout_marginLeft="224dp"
        android:layout_marginTop="56dp"
        android:text="@string/end_quiz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrong_answers" />
</androidx.constraintlayout.widget.ConstraintLayout>