<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Welcome"
    android:background="@drawable/background1">

    <ImageView
        android:id="@+id/logout"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/logout"
        android:foreground="?android:selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toEndOf="@+id/stats"
        app:layout_constraintTop_toBottomOf="@+id/user"
        app:srcCompat="@drawable/_124045_logout_icon" />

    <ImageView
        android:id="@+id/quiz"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="180dp"
        android:foreground="?android:selectableItemBackground"
        android:contentDescription="@string/quiz"
        app:layout_constraintEnd_toStartOf="@+id/user"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/brain" />

    <ImageView
        android:id="@+id/user"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:contentDescription="@string/user"
        android:foreground="?android:selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/userwb" />

    <ImageView
        android:id="@+id/stats"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="48dp"
        android:foreground="?android:selectableItemBackground"
        android:contentDescription="@string/results"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz"
        app:srcCompat="@drawable/check1" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="45dp"
        android:layout_height="30dp"
        android:fontFamily="@font/calibrillight"
        android:text="@string/quiz"
        android:textColor="#F9F9F9"
        android:textColorHighlight="#FFFFFF"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/stats"
        app:layout_constraintEnd_toEndOf="@+id/quiz"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="@+id/quiz"
        app:layout_constraintTop_toTopOf="@+id/quiz"
        app:layout_constraintVertical_bias="0.916" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="67dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/calibrillight"
        android:gravity="center"
        android:text="@string/profile"
        android:textColor="#F9F9F9"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/user"
        app:layout_constraintHorizontal_bias="0.506"

        app:layout_constraintStart_toStartOf="@+id/user"
        app:layout_constraintTop_toBottomOf="@+id/user" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="225dp"
        android:layout_height="76dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nunito_sans_extralight"
        android:text="@string/dashboard"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Dashboard" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="136dp"
        android:layout_height="31dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/nunito_sans_extralight"
        android:text="@string/welcome_back"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Welcome back" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="21dp"
        android:fontFamily="@font/calibrillight"
        android:text="@string/results"
        android:textColor="#F9F9F9"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/stats"
        app:layout_constraintStart_toStartOf="@+id/stats"
        app:layout_constraintTop_toBottomOf="@+id/stats"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/calibrillight"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="#F9F9F9"
        android:textColorHighlight="@color/red"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/logout"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/logout" />

</androidx.constraintlayout.widget.ConstraintLayout>