<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Final_Result"
    android:background="@drawable/backgroundlogin">

    <ImageView
        android:id="@+id/backr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button_red" />

    <TextView
        android:id="@+id/Total"
        android:layout_width="62dp"
        android:layout_height="300dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:gravity="center|top"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/Wrong_Answers"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/Time"
        android:layout_width="83dp"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        android:gravity="center|top"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/Date"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/Correct_Answers"
        android:layout_width="62dp"
        android:layout_height="300dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:gravity="center|top"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/Time"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/Wrong_Answers"
        android:layout_width="62dp"
        android:layout_height="300dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:gravity="center|top"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/Correct_Answers"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="59dp"
        android:layout_height="41dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="156dp"
        android:gravity="center"
        android:text="@string/date"
        android:textColor="#FFFFFF"
        app:autoSizeTextType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="59dp"
        android:layout_height="41dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="156dp"
        android:gravity="center"
        android:text="@string/time"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="62dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="156dp"
        android:gravity="center"
        android:text="@string/correct_answers"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="59dp"
        android:layout_height="41dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="156dp"
        android:gravity="center"
        android:text="@string/wrong_answers"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Date"
        android:layout_width="83dp"
        android:layout_height="300dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center|top"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="outsideInset"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="59dp"
        android:layout_height="41dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="156dp"
        android:gravity="center"
        android:text="@string/total"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Average"
        android:layout_width="200dp"
        android:layout_height="19dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/average"
        app:layout_constraintTop_toBottomOf="@+id/Time" />

    <TextView
        android:id="@+id/average"
        android:layout_width="117dp"
        android:layout_height="19dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/average_score"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Time" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="280dp"
        android:layout_height="73dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/comicsans"
        android:text="Result Report"
        android:textColor="#E95D5D"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>